# MovieApp/routes/movieRoutes.js
@@ -1,9 +1,9 @@
 import { Router } from 'express';
 const router = Router();
-import { getMoviesView, getPopularMovies, searchMovies, getMergedMovieDetails } from '../controllers/movieController.js';
+import { getPopularMovies, searchMovies, getMergedMovieDetails } from '../controllers/movieController.js';
 
-router.get('/', getMoviesView);
-router.get('/popular', getPopularMovies);
+//router.get('/', getMoviesView);
+router.get('/', getPopularMovies);
 router.get('/search', searchMovies);
 router.get('/:tmdbId/details', getMergedMovieDetails);
 
